UI added, pages have placeholders, configs edited

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.53.2",
+    "axios": "^1.7.7",
     "daisyui": "^4.12.10",
     "lucide-react": "^0.438.0",
     "react": "^18.3.1",
