--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@tanstack/react-query": "^5.53.2",
     "axios": "^1.7.7",
     "daisyui": "^4.12.10",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.438.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.53.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1"
   },
