--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.53.2",
     "axios": "^1.7.7",
+    "browser-image-compression": "^2.0.2",
     "daisyui": "^4.12.10",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
